<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="low_memory_error">Unable to complete previous operation due to low memory</string>
    <string name="opening_file_error">Failed to open selected file</string>
    <string name="color_picker_button_more">More</string>
    <string name="color_picker_hue">Hue</string>
    <string name="color_picker_saturation">Saturation</string>
    <string name="color_picker_value">Value</string>
    <string name="color_picker_button_set">Set</string>
    <string name="color_picker_button_cancel">Cancel</string>
    <string name="color_picker_dialog_title">Select color</string>
    <string name="color_picker_button_red">Red</string>
    <string name="color_picker_button_cyan">Cyan</string>
    <string name="color_picker_button_blue">Blue</string>
    <string name="color_picker_button_green">Green</string>
    <string name="color_picker_button_magenta">Magenta</string>
    <string name="color_picker_button_yellow">Yellow</string>
    <string name="color_picker_button_black">Black</string>
    <string name="color_picker_button_white">White</string>
    <string name="copy_to_clipboard_failure_message">Failed to copy to the clipboard</string>
    <string name="actionbar_share">Share</string>
    <string name="actionbar_web_search">Web search</string>
    <string name="accessibility_content_view">Web View</string>
    <string name="date_picker_dialog_title">Set date</string>
    <string name="date_picker_dialog_set">Set</string>
    <string name="date_picker_dialog_clear">Clear</string>
    <string name="date_picker_dialog_other_button_label">Other</string>
    <string name="date_time_picker_dialog_title">Set date and time</string>
    <string name="time_picker_dialog_title">Set time</string>
    <string name="time_picker_dialog_am">AM</string>
    <string name="time_picker_dialog_pm">PM</string>
    <string name="time_picker_dialog_hour_minute_separator">:</string>
    <string name="time_picker_dialog_minute_second_separator">:</string>
    <string name="time_picker_dialog_second_subsecond_separator">.</string>
    <string name="month_picker_dialog_title">Set month</string>
    <string name="week_picker_dialog_title">Set week</string>
    <string name="accessibility_datetime_picker_date">Date</string>
    <string name="accessibility_datetime_picker_time">Time</string>
    <string name="accessibility_date_picker_month">Month</string>
    <string name="accessibility_date_picker_week">Week</string>
    <string name="accessibility_date_picker_year">Year</string>
    <string name="accessibility_time_picker_hour">Hour</string>
    <string name="accessibility_time_picker_minute">Minute</string>
    <string name="accessibility_time_picker_second">Second</string>
    <string name="accessibility_time_picker_milli">Millisecond</string>
    <string name="accessibility_time_picker_ampm">AM/PM</string>
    <string name="media_player_error_title">Cannot play video</string>
    <string name="media_player_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device.</string>
    <string name="media_player_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="media_player_error_button">OK</string>
    <string name="media_player_loading_video">Loading video</string>
    <string name="profiler_started_toast">Profiler started</string>
    <string name="profiler_stopped_toast">Profiler finished. Results are in %1$s.</string>
    <string name="profiler_no_storage_toast">"Can't start profiler because external storage is not ready"</string>
    <string name="profiler_error_toast">Failed to start profiler</string>
    <string name="leave_this_page">Leave this Page</string>
    <string name="stay_on_this_page">Stay on this Page</string>
    <string name="reload_this_page">Reload this Page</string>
    <string name="dont_reload_this_page">"Don't reload"</string>
    <string name="js_modal_dialog_confirm">OK</string>
    <string name="js_modal_dialog_cancel">Cancel</string>
    <string name="suppress_js_modal_dialogs">Prevent this page from creating additional dialogs</string>
    <string name="accessibility_js_modal_dialog_prompt">Prompt</string>
    <string name="certtitle">Certificate Viewer</string>
    <string name="sync_error_generic">Sync error</string>
    <string name="sync_error_ga">Please update your sign in details.</string>
    <string name="sync_error_connection">Could not connect to the sync server.</string>
    <string name="sync_error_domain">Sync is not available for your domain.</string>
    <string name="sync_error_service_unavailable">The service is not available; try again later.</string>
    <string name="policy_dialog_title">Confirm sign in</string>
    <string name="policy_dialog_message">"This account is managed by %1$s.

You are signing in with a managed account and giving its administrator control over your Chrome profile. Your Chrome data will become permanently tied to this account. Disconnecting from this account will delete the local Chrome data."</string>
    <string name="policy_dialog_proceed">Accept and sign in</string>
    <string name="policy_dialog_cancel">Cancel</string>
    <string name="wiping_profile_data_title">Clearing account data</string>
    <string name="wiping_profile_data_message">Please wait...</string>
    <string name="infobar_close">Close</string>
    <string name="translate_infobar_text">This page is in ^1. Translate it to ^2?</string>
    <string name="translate_infobar_change_languages">Change languages</string>
    <string name="translate_infobar_translation_done">Translated to %1$s.</string>
    <string name="translate_infobar_translation_more_options">More</string>
    <string name="translate_infobar_translating">Translating page to %1$s...</string>
    <string name="translate_infobar_error">Oops. This page could not be translated.</string>
    <string name="translate_always_text">Always translate %1$s</string>
    <string name="translate_never_translate_message_text">Would you like Google Chrome to offer to translate %1$s pages from this site next time?</string>
    <string name="translate_button">Translate</string>
    <string name="translate_nope">Nope</string>
    <string name="translate_show_original">Show original</string>
    <string name="translate_retry">Try again</string>
    <string name="translate_options_source_hint">Page Language: ^1</string>
    <string name="translate_options_target_hint">Translation Language: ^1</string>
    <string name="translate_button_done">Done</string>
    <string name="translate_never_translate_site">Never translate this site</string>
    <string name="translate_never_translate_language">Never translate %1$s</string>
    <string name="menu_print">Print…</string>
    <string name="error_printing_failed">There was a problem printing the page. Please try again.</string>
    <string name="accessibility_menu_bookmark">Bookmark page</string>
    <string name="accessibility_menu_edit_bookmark">Edit bookmark page</string>
    <string name="accessibility_menu_forward">Go forward</string>
    <string name="accessibility_menu_back">Go back</string>
    <string name="contextmenu_open_in_new_tab">Open in new tab</string>
    <string name="contextmenu_open_in_incognito_tab">Open in incognito tab</string>
    <string name="contextmenu_copy_link_address">Copy link address</string>
    <string name="contextmenu_copy_link_text">Copy link text</string>
    <string name="contextmenu_save_link">Save link</string>
    <string name="contextmenu_save_image">Save image</string>
    <string name="contextmenu_open_image">Open image</string>
    <string name="contextmenu_open_image_in_new_tab">Open image in new tab</string>
    <string name="contextmenu_open_original_image_in_new_tab">Open original image in new tab</string>
    <string name="contextmenu_search_web_for_image">Search %1$s for this image</string>
    <string name="contextmenu_copy_image">Copy image</string>
    <string name="contextmenu_save_video">Save video</string>
    <string name="smartcard_dialog_title">Choose certificate for authentication</string>
    <string name="smartcard_certificate_option">Smart card</string>
    <string name="cancel">Cancel</string>
    <string name="http_post_warning">"The page that you're looking for used information that you entered. Returning to that page might cause any action you took to be repeated. Do you want to continue?"</string>
    <string name="http_post_warning_resend">Continue</string>
    <string name="firstrun_signed_in_title">"You're now signed in to Chrome."</string>
    <string name="firstrun_signed_in_description">Your open tabs, bookmarks, history, and more are being synced with your Google Account.</string>
    <string name="sad_tab_title">Aw, Snap!</string>
    <string name="sad_tab_message">Something went wrong while displaying this webpage. To continue, reload or go to another page.</string>
    <string name="sad_tab_help_message">"If you're seeing this frequently, try these $1."</string>
    <string name="sad_tab_help_link">suggestions</string>
    <string name="sad_tab_reload_label">Reload</string>
    <string name="options_startup_pages_placeholder">Enter URL...</string>
    <string name="options_homepage_title">Home page</string>
    <string name="url_hint">Type URL Here</string>
    <string name="print_menu">Print…</string>
    <string name="signin_select_account">Select Account</string>
    <string name="signin_sign_in">Sign in</string>
    <string name="signin_cancel">Cancel</string>
    <string name="signout_title">Do you want to sign out?</string>
    <string name="signout_sign_out">Sign out</string>
    <string name="signout_cancel">Cancel</string>
    <string name="browser_process_initialization_failed">Initialization failed.</string>
    
    <!-- new add -->
    <string name="app_name">HawkBrowser</string>
    <string name="address_input_hint">Search or Input URL</string>
    <string name="search">Search</string>
    <string name="enter">Enter</string>
	<string name="back">back</string>
    <string name="forward">forward</string>
    <string name="menu">menu</string>
    <string name="home">home</string>
    <string name="selectwindow">windows</string>
    <string name="scan_qrcode">scan qrcode</string>
    <string name="speak_search">speek search</string>
    <string name="clear_input">clear input</string>
    <string name="refresh_cancel">refresh or cancel</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="addbookmark">Add Bookmark</string>
    <string name="bookmark">Bookmark</string>
    <string name="history">History</string>
    <string name="refresh">Refresh</string>
    <string name="personal_center">Personal Center</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="setting">Setting</string>
    <string name="night_mode">Night Mode</string>
    <string name="imageless_mode">Imageless Mode</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="file">File</string>
    <string name="system_render">System Render</string>
    <string name="chrome_render">Chrome Render</string>
    <string name="day_mode">Day Mode</string>
    <string name="incognito">Incognito browsing</string>
</resources>
