<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_menubar_right"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:orientation="horizontal" >

    <TableRow
        android:id="@+id/popmenu_menubar_right_row1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/popup_menubar_margin" >

        <Button
            android:id="@+id/popup_menubar_setting"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/popup_menubar_btn_bg"
            android:drawableTop="@drawable/popup_menubar_setting"
            android:text="@string/setting"
            android:textSize="@dimen/popup_menubar_textsize" />

        <Button
            android:id="@+id/popup_menubar_nightmode"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/popup_menubar_btn_bg"
            android:drawableTop="@drawable/popup_menubar_nightmode"
            android:text="@string/night_mode"
            android:textSize="@dimen/popup_menubar_textsize" />

        <Button
            android:id="@+id/popup_menubar_noimage"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/popup_menubar_btn_bg"
            android:drawableTop="@drawable/popup_menubar_noimage"
            android:text="@string/imageless_mode"
            android:textSize="@dimen/popup_menubar_textsize" />

        <Button
            android:id="@+id/popup_menubar_fullscreen"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/popup_menubar_btn_bg"
            android:drawableTop="@drawable/popup_menubar_fullscreen"
            android:text="@string/fullscreen"
            android:textSize="@dimen/popup_menubar_textsize" />
    </TableRow>
    
	<TableRow
        android:id="@+id/popmenu_menubar_right_row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/popup_menubar_margin" >

        <Button
            android:id="@+id/popup_menubar_file"
            android:layout_width="@dimen/popup_menubar_btn_width"
            android:layout_height="@dimen/popup_menubar_btn_height"
            android:background="@drawable/popup_menubar_btn_bg"
            android:drawableTop="@drawable/icon_file"
            android:text="@string/file"
            android:textSize="@dimen/popup_menubar_textsize" />
    </TableRow>
    
</TableLayout>